--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - pip
   run:
     - python >=3.9
-    - tensorflow
+    - tensorflow ==2.8.0
     - scikit-learn
     - protobuf ==3.20.0
     - pandas
