--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,13 +18,12 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python ==3.9
     - pip
   run:
-    - python >=3.9
+    - python ==3.9
     - tensorflow ==2.8.0
     - scikit-learn
-    - protobuf ==3.20.0
     - pandas
     - python-dateutil
 
