--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
   run:
     - python ==3.9
     - tensorflow ==2.8.0
+    - protobuf ==3.20.0
     - scikit-learn
     - pandas
     - python-dateutil
