--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - pip
   run:
     - python ==3.9
-    - tensorflow ==2.8.0
+    - tensorflow
     - protobuf ==3.20.0
     - scikit-learn
     - pandas
